# lib1

./: .bumpversion.cfg  .cookiecutterrc  .coveragerc  AUTHORS.rst  CONTRIBUTING.rst  MANIFEST  pyproject.toml  setup.cfg  setup.py  tox.ini
ci/: appveyor-download.py
docs/: conf.py  installation.rst  usage.rst
docs/reference/: index.rst  lib1.rst
src/lib1/: __main__.py  app.py  cli.py
tests/: test_lib1.py
