[tool.poetry]
name = "01d61084-d29e-11e9-96d1-7c5cf84ffe8e"
version = "0.1.0"
description = ""
authors = ["retool <noreply+zztokdufhjcfspskvqvt@cordaz.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
attrs = "^19.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
