[tool.poetry]
name = "01d61084-d29e-11e9-96d1-7c5cf84ffe8e"
version = "0.1.0"
description = "library"
authors = ["metatooling <noreply+zztokdufhjcfspskvqvt@cordaz.com>"]
packages = {include = "lib1", from = "src"}

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
attrs = "^19.1"

[tool.poetry.dev-dependencies]
bump2version = "^0.5.10"
coverage = "^4.5"
pytest = "^5.0"
pylint = "^2.3"
twine = "^1.13"
vulture = "^1.0"
cuvner = "^18.0"
pytest-cov = "^2.7"
tox = "^3.13"
sphinx_rtd_theme = "^0.4.3"
pytest-sugar = "^0.9.2"
docshtest = "^0.0.2"
pre-commit = "^1.18"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
pygments = {version = "^2.4", allows-prereleases = true}
pudb = "^2019.1"
ipython = "^7.8"
pp-ez = "^0.2.0"
sphinx_autodoc_typehints = "^1.7"

[tool.poetry.extras]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
    "sphinx-click",
    "marshmallow-jsonschema",
    "sphinx-jsonschema",

]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
